<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tipTextView"
        android:layout_alignLeft="@id/tipTextView"
        android:layout_alignTop="@id/totalLabel"
        android:text="@string/total_amount"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tipLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp"
        android:text="@string/total_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/percentTextView"
        android:layout_alignLeft="@id/percentTextView"
        android:layout_alignTop="@id/tipLabel"
        android:text="@string/tip_amount"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/percentDownButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="23dp"
        android:text="@string/tip_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@id/percentDownButton"
        android:layout_alignEnd="@id/billAmountEditText"
        android:layout_alignRight="@id/billAmountEditText"
        android:backgroundTint="#C8C0C0"
        android:text="@string/increase"
        android:textSize="20sp" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/billAmountEditText"
        android:layout_toStartOf="@id/percentUpButton"
        android:layout_toLeftOf="@id/percentUpButton"
        android:backgroundTint="#C8C0C0"
        android:text="@string/decrease"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/billAmountEditText"
        android:layout_alignLeft="@id/billAmountEditText"
        android:layout_alignTop="@id/percentLabel"
        android:text="@string/tip_percent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/percentDownButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/billAmountLabel"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/billAmountLabel"
        android:layout_toRightOf="@id/billAmountLabel"
        android:ems="8"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:text="@string/bill_amount_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalLabel"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/tip_percent_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/percent2"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/tip_percent"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>